# brief-forge

./: .env.example  README.md  pyproject.toml
brief_forge/: __init__.py  app.py  formatter.py  generator.py  models.py
brief_forge/static/: style.css
brief_forge/templates/: brief_partial.html  index.html
tests/: test_app.py  test_formatter.py  test_generator.py  test_models.py
