[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "brief_forge"
version = "0.1.0"
description = "Transform plain-language design goals into structured, actionable creative briefs using GPT-4o."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Brief Forge Contributors" }
]
keywords = ["design", "briefs", "ai", "openai", "flask", "creative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

dependencies = [
    "flask>=3.0.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
briefforge = "brief_forge.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["brief_forge*"]

[tool.setuptools.package-data]
brief_forge = [
    "templates/*.html",
    "static/*.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["brief_forge"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
